# hw13_project

./: .example.env  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
hw13_project/: asgi.py  settings.py  urls.py  wsgi.py
quotes/: admin.py  forms.py  models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py  0002_author_user_quote_user.py
quotes/static/quotes/: styles.css
quotes/templates/quotes/: author-add.html  author-view.html  author.html  base.html  index.html  quote-add.html
quotes/templatetags/: extract.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  signup.html
utils/: migration.py
utils/data/: authors.json
